# AaltoMME

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  FILES  LICENSE  MME.service  Makefile.am  NEWS  README  README.md  TODO  configure.ac  mme.cfg  mme.doxyfile  run_tests.sh
Common/: logmgr.c  logmgr.h  timermgr.c  timermgr.h
MMEcmd/: MMEcmd.c  Makefile.am
NAS/: CMakeLists.txt  Makefile.am
NAS/include/: NASHandler.h  NASlog.h  eea0.h  eia0.h  eia2.h
NAS/shared/: Makefile.am  NAS.h  NASConstants.h  NASMessages.h  StandardIeSchemas.h
NAS/src/: Makefile.am  NAS.c  NASMessages.c  NASlog.c  StandardIeSchemas.c  eea0.c  eia0.c  eia2.c
NAS/testApp/: Makefile.am  NAStest.c
S1AP/: CMakeLists.txt  Makefile.am  TODO
S1AP/include/: S1AP_IEdec.h  S1AP_IEenc.h  S1APlog.h  rt_per_bin.h
S1AP/shared/: CommonDataTypes.h  Constants.h  Containers.h  Makefile.am  S1AP.h  S1AP_IE.h  S1AP_PDU.h
S1AP/specs/: S1AP v8.10.0.asn  S1AP-CommonDataTypes.asn  S1AP-Constants.asn  S1AP-Containers.asn  S1AP-IEs.asn  S1AP-PDU-Contents.asn  S1AP-PDU-Descriptions.asn
S1AP/src/: CommonDataTypes.c  Constants.c  Containers.c  Makefile.am  S1AP.c  S1AP_IE.c  S1AP_IEdec.c  S1AP_IEenc.c  S1AP_PDU.c  S1APlog.c  rt_per_bin.c
S1AP/testApp/: Makefile.am  S1APtest.c
S1AP/testApp/binaries/: initiatingMessage.s1
SDN/shared/: SDNMessages.h
TestProgram/: CMakeLists.txt  EchoReq.pcap  EchoRsp.pcap  Makefile.am  README  check_all.c  check_libgtp.c  check_libgtp.h  check_libs1ap.c  check_libs1ap.h  check_nas.c  check_nas.h  check_rt_per.c  check_rt_per.h
cmake/: Doxyfile.in
doc/: ARCHITECTURE.md
exampleProgram/: Makefile.am  eNBemulator.c  eping.c  exampleProgram.c  hmac_test.c  loadWithAttach.c  loadtest.c
exampleProgram/binaries/: resetSuccess.s1
libgtp/: CMakeLists.txt  Makefile.am  gtp.c  gtpie.c
libgtp/include/: Makefile.am  gtp.h  gtpie.h
mme/: CMakeLists.txt  MME.c  MME.h  MME_engine.c  MME_engine.h  MME_test.c  MMEutils.c  MMEutils.h  Makefile.am  Subscription.c  Subscription.h  commands.c  commands.h  commands_msg.h  nodemgr.c  nodemgr.h  signals.h  storagesys.c  storagesys.h
mme/Controller/: MME_Controller.c  MME_Controller.h
mme/S1/: ECMSession.c  ECMSession.h  ECMSession_Connected.c  ECMSession_Connected.h  ECMSession_FSMConfig.c  ECMSession_FSMConfig.h  ECMSession_Idle.c  ECMSession_Idle.h  ECMSession_State.h  ECMSession_priv.h  MME_S1.c  MME_S1.h  MME_S1_priv.h  S1Assoc.c  S1Assoc.h  S1Assoc_Active.c  S1Assoc_Active.h  S1Assoc_FSMConfig.c  S1Assoc_FSMConfig.h  S1Assoc_NotConfigured.c  S1Assoc_NotConfigured.h  S1Assoc_State.h  S1Assoc_priv.h
mme/S1/NAS/: EMMCtx.c  EMMCtx.h  EMMCtx_iface.h  EMM_CommonProcedureInitiated.c  EMM_CommonProcedureInitiated.h  EMM_Deregistered.c  EMM_Deregistered.h  EMM_DeregisteredInitiated.c  EMM_DeregisteredInitiated.h  EMM_FSMConfig.c  EMM_FSMConfig.h  EMM_Registered.c  EMM_Registered.h  EMM_SpecificProcedureInitiated.c  EMM_SpecificProcedureInitiated.h  EMM_State.h  EMM_Timers.c  EMM_Timers.h  EPS_Session.c  EPS_Session.h  EPS_Session_iface.h  EPS_Session_priv.h  ESM_Active.c  ESM_Active.h  ESM_ActivePending.c  ESM_ActivePending.h  ESM_BearerContext.c  ESM_BearerContext.h  ESM_FSMConfig.c  ESM_FSMConfig.h  ESM_Inactive.c  ESM_Inactive.h  ESM_InactivePending.c  ESM_InactivePending.h  ESM_ModifyPending.c  ESM_ModifyPending.h  ESM_State.h  NAS_Definitions.h  NAS_EMM.c  NAS_EMM.h  (+6 more)
mme/S11/: MME_S11.c  MME_S11.h  S11_Ctx.c  S11_Ctx.h  S11_FSMConfig.c  S11_FSMConfig.h  S11_NoCtx.c  S11_NoCtx.h  S11_Peer.c  S11_Peer.h  S11_State.h  S11_UlCtx.c  S11_UlCtx.h  S11_User.c  S11_User.h  S11_WCtxRsp.c  S11_WCtxRsp.h  S11_WDel.c  S11_WDel.h  S11_WModBearerRsp.c  S11_WModBearerRsp.h
mme/S6a/: HSS.c  HSS.h  MME_S6a.c  MME_S6a.h  S6a.h  SQLqueries.h
mme/S6a/milenage/: aes.c  aes.h  milenage.c  milenage.h
mme/S6a/scripts/: dbdump.sh  hss_lte_db.sql  userdata.sql
test/: CMakeLists.txt  eia2.c  eia2.h  main_tests.c
